<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@color/colorFondo"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/txt_opciones_contenido"/>

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFBB33"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/btnEliminar"
        />

    <Spinner
        android:id="@+id/spn_albumes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#fff"
        android:gravity="center"
        android:textStyle="bold"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btn_mover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFBB33"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/btnMover" />

    <Button
        android:id="@+id/btn_compartir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFBB33"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/btnCompartir" />


</LinearLayout>