<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jeiro.organizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBlanco">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:background="@color/colorFondo">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo3"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_app"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:id="@+id/txt_nombre_app"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_nombre_usuario_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txt_nombre_usuario_login"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"/>
            <EditText
                android:id="@+id/txt_nombre_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt_nombre_usuario_login"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:text="admin"
                android:singleLine="true" />
            <TextView
                android:id="@+id/txt_contraseña_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_nombre_usuario"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/txt_contraseña_login"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_contraseña_login"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="admin"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/btn_iniciar_sesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_iniciar_sesion"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/txt_contraseña"
                android:background="@drawable/boton_redondeado"
                android:textSize="15sp"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:onClick="iniciar_sesion"
                />
            <Button
                android:id="@+id/btn_registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_registrarse"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"
                android:layout_below="@+id/btn_iniciar_sesion"
                android:layout_centerHorizontal="true"
                android:onClick="registrar_usuario"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_derechos"
                android:drawableRight="@drawable/ic_copyright_black_24dp"
                android:textColor="#000"
                android:id="@+id/txt_derechos"
                android:layout_marginBottom="15dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
