<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jeiro.organizapp.Registrar_usuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBlanco">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_nombre_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/txt_nombre_registro"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_nombre_completo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_completo"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/txt_nombre_registro"
                android:layout_marginLeft="23dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_nombre_completo_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName"
                android:layout_below="@+id/txt_nombre_completo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/txt_nombre_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_usuario"
                android:layout_below="@+id/txt_nombre_completo_registro"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_nombre_usuario_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"
                android:inputType="textPersonName"
                android:layout_below="@+id/txt_nombre_usuario"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_contraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_contraseña_login"
                android:layout_marginTop="20sp"
                android:layout_below="@+id/txt_nombre_usuario_registro"
                android:layout_alignStart="@+id/txt_nombre_usuario"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_contraseña_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_below="@+id/txt_contraseña"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/confirmar_contra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_contra"
                android:layout_below="@+id/txt_contraseña_registro"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_confirmar_contraseña_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_below="@+id/confirmar_contra"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp" />

            <Button
                android:id="@+id/btn_registrar_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_registrar_usuario"
                android:layout_below="@+id/txt_confirmar_contraseña_registro"
                android:layout_marginTop="25dp"
                android:layout_alignStart="@+id/txt_confirmar_contraseña_registro"
                android:layout_alignEnd="@+id/txt_confirmar_contraseña_registro"
                android:background="@drawable/boton_redondeado"
                android:textSize="15sp"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:onClick="registrar_usuario"
                />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
